add pandas to typo-ci config

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -35,6 +35,10 @@ excluded_words:
   - arange
   - det
   - vstack
+  # pandas --------------------------------------
+  - isin
+  - isnan
+  - fillna
   # jupyter notebooks ---------------------------
   - jupyter
   - nbformat
