implemented DV-groove functionality

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
@@ -241,6 +241,10 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
+          h1:
+            $ref: "#/definitions/root-face"
+          h2:
+            $ref: "#/definitions/root-face"
 
         required: [t, alpha_1, alpha_2, R, b, c]
     required: [type, components]
