implemented DHV-Groove functionality

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
@@ -299,14 +299,16 @@ anyOf:
             $ref: "#/definitions/bevel-angle"
           beta_2:
             $ref: "#/definitions/bevel-angle"
-          h:
+          h1:
+            $ref: "#/definitions/root-face"
+          h2:
             $ref: "#/definitions/root-face"
           b:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
 
-        required: [t, beta_1, beta_2, h, b, c]
+        required: [t, beta_1, beta_2, b, c]
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
