--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
@@ -5,9 +5,9 @@ id: "http://weldx.bam.de/schemas/weldx/time/datetimeindex-1.0.0"
 tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0"
 
 title: |
-  Represents an instance in time.
-type: object
-properties:
+  Represents an array of timestamps following pandas.DatetimeIndex.
+
+definitions:
   values:
     description: |
       Integer representation of a pandas DatetimeIndex in nanoseconds precision.
@@ -40,9 +40,42 @@ properties:
       Maximum timestamp in the index.
     $ref: timestamp-1.0.0
 
-required: [values]
-propertyOrder: [values, start, end, freq, min, max]
-additionalProperties: true
+anyOf:
+  - type: object
+    properties:
+      values:
+        $ref: "#/definitions/values"
+      start:
+        $ref: "#/definitions/start"
+      end:
+        $ref: "#/definitions/end"
+      freq:
+        $ref: "#/definitions/freq"
+      min:
+        $ref: "#/definitions/min"
+      max:
+        $ref: "#/definitions/max"
+
+    required: [values]
+    propertyOrder: [values, start, end, freq, min, max]
+    additionalProperties: false
+
+  - type: object
+    properties:
+      start:
+        $ref: "#/definitions/start"
+      end:
+        $ref: "#/definitions/end"
+      freq:
+        $ref: "#/definitions/freq"
+      min:
+        $ref: "#/definitions/min"
+      max:
+        $ref: "#/definitions/max"
+
+    required: [start, end, freq]
+    propertyOrder: [start, end, freq, min, max]
+    additionalProperties: false
 ...
 
 
