--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
@@ -5,7 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/time/timedeltaindex-1.0.0"
 tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
 
 title: |
-  Represents an instance in time.
+  Represents an array of timedeltas following pandas.TimedeltaIndex.
 
 definitions:
   values:
