implemented all FFGroove functionalities

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
@@ -366,7 +366,7 @@ anyOf:
           e:
             $ref: "#/definitions/special-depth"
 
-        required: [t_1, t_2, alpha, b, e]
+        required: [t_1]
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
