add and apply isort config

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-cove
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
+[isort]
+default_section = THIRDPARTY
+known_first_party = weldx
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
 [coverage:report]
 omit =
     weldx/_version.py
