--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
 [isort]
+line_length=88
 default_section = THIRDPARTY
 known_first_party = weldx
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
