--- a/setup.cfg
+++ b/setup.cfg
@@ -25,10 +25,12 @@ asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
 [isort]
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = True
-ensure_newline_before_comments = True
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+ensure_newline_before_comments=True
 default_section = THIRDPARTY
 known_first_party = weldx
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
