add and apply isort config, change Q_ imports to weldx.constants to avoid import dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,17 @@ addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-cove
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+ensure_newline_before_comments=True
+default_section = THIRDPARTY
+known_first_party = weldx
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
 [coverage:report]
 omit =
     weldx/_version.py
