Test utility as_xarray_dims

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -36,6 +36,7 @@ excluded_words:
   - matmul
   - ndarray
   - ndim
+  - newaxis
   - vstack
   # pandas --------------------------------------
   - isin
