order LCS Dimensions in dataset accessor and add coverage config

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,14 @@ ensure_newline_before_comments=True
 default_section = THIRDPARTY
 known_first_party = weldx
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[coverage:report]
+omit =
+    weldx/scripts/*
+
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # ignore class __repr__ functions:
+    def __repr__
