add tests for get_time_union and xr_fill_all

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,8 @@ omit =
 
 exclude_lines =
     # Have to re-enable the standard pragma
-    pragma: no cover
+    pragma:
+    no cover
 
     # ignore class __repr__ functions:
     def __repr__
