--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,7 @@ omit =
 
 exclude_lines =
     # Have to re-enable the standard pragma
-    pragma:
-    no cover
+    pragma: no cover
 
     # ignore class __repr__ functions:
     def __repr__
