--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ match_dir = [^\.][^\docs].*
 
 [tool:pytest]
 addopts = --tb=short --color=yes --cov=weldx --cov-report term-missing
-# costum test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
+# custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow (deselect from pytest run with '-m "not slow"' option)
 
