--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,31 @@ select = C,E,F,W,B,B950 # black formatting options
 [pydocstyle]
 match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
+
+[tool:pytest]
+addopts = --tb=short --color=yes --cov=weldx --cov-report term-missing
+# custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
+markers =
+    slow: marks tests as slow (deselect from pytest run with '-m "not slow"' option)
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+ensure_newline_before_comments=True
+default_section = THIRDPARTY
+known_first_party = weldx
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[coverage:report]
+omit =
+    weldx/scripts/*
+
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # ignore class __repr__ functions:
+    def __repr__
