exclude versioneer from typo-ci

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -7,6 +7,8 @@ excluded_files:
   - "docs*"
   - "environment.yml"
   - "tools*"
+  - "versioneer.py"
+  - "weldx/_version.py"
 
 excluded_words:
   - typoci
