--- a/.codacy.yml
+++ b/.codacy.yml
@@ -12,3 +12,6 @@ engines:
 exclude_paths:
   - 'docs/**'
   - '.vulture_whitelist.py'
+  - 'versioneer.py'
+  - 'weldx/_version.py'
+  - 'scripts/**'
