--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -40,6 +40,28 @@ jobs:
         run: |
           flake8
 
+  isort:
+    name: isort
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+    strategy:
+      matrix:
+        os: [ubuntu-18.04]
+        py: [ '3.7', '3.8' ]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.py }}
+      - name: pip installs
+        run: pip install git+https://github.com/timothycrosley/isort.git
+      - name: show isort diff
+        run: |
+          isort ./weldx --diff
+      - name: run isort
+        run: |
+          isort ./weldx --check-only
+
   vulture:
     name: vulture
     runs-on: ${{ matrix.os }}
@@ -57,4 +79,4 @@ jobs:
         run: pip install vulture==1.4
       - name: run vulture
         run: |
-          vulture .
+          vulture . --exclude weldx/asdf/,versioneer.py,weldx/_version.py
