--- a/setup.cfg
+++ b/setup.cfg
@@ -5,17 +5,24 @@
 
 # Note: there cannot be spaces after comma's here
 ignore =
-    W503,W504  # line break after binary operator
+    W503,W504,  # line break after binary operator
+    E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
 max-line-length = 88
 select = C,E,F,W,B,B950 # black formatting options
-
+per-file-ignores =
+    aws_setup.py:E501
+exclude =
+    versioneer.py,
+    __init__.py
 
 [pydocstyle]
-match = (?!__).*\.py
+match = (?!__)(?!versioneer)(?!_version).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx --cov-report term-missing
+addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered
+asdf_schema_root = weldx/asdf/schemas
+#asdf_schema_tests_enabled = true
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow (deselect from pytest run with '-m "not slow"' option)
@@ -33,6 +40,7 @@ sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 [coverage:report]
 omit =
+    weldx/_version.py
     weldx/scripts/*
 
 exclude_lines =
@@ -41,3 +49,10 @@ exclude_lines =
 
     # ignore class __repr__ functions:
     def __repr__
+
+[versioneer]
+VCS = git
+versionfile_source = weldx/_version.py
+versionfile_build = weldx/_version.py
+tag_prefix =
+parentdir_prefix =
