--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -1,5 +1,16 @@
 name: conda build
-on: [push]
+on:
+  # Trigger the workflow on push events on master
+  push:
+    branches:
+      - master
+      - conda_build_upload
+  # Trigger the workflow on all pull request
+  pull_request:
+  # Trigger the workflow on all release created events
+  release:
+    types:
+      - created
 
 jobs:
   test:
@@ -22,3 +33,9 @@ jobs:
       run: |
         source activate build_env
         conda build .
+    - name: upload package to dev label on Anaconda Cloud
+      env: # set access token from GitHub secrets
+        anaconda_token: ${{ secrets.Anaconda_BAMwelding }}
+      run: |
+        package_dir=$(conda build . --output)
+        anaconda -t $anaconda_token upload --user BAMwelding --label dev $package_dir
