--- a/setup.cfg
+++ b/setup.cfg
@@ -47,8 +47,10 @@ exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
 
-    # ignore class __repr__ functions:
+    # ignore class __repr__-like functions:
     def __repr__
+    def __str__
+    def _ipython_display_
 
 [versioneer]
 VCS = git
