--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,6 +2,43 @@ name: pytest
 on: [push]
 
 jobs:
+  pytest:
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu, macos, windows]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Conda Environment
+        uses: goanpeca/setup-miniconda@v1
+        with:
+          miniconda-version: "latest"
+          auto-update-conda: true
+          python-version: 3.6
+          environment-file: environment.yml
+          activate-environment: weldx
+          auto-activate-base: false
+
+      - name: conda info
+        shell: bash -l {0}
+        run: conda info
+
+      - name: conda list
+        shell: bash -l {0}
+        run: conda list
+
+      - name: pytest
+        shell: bash -l {0}
+        run: |
+          pytest
+
+      - name: codecov.io
+        uses: codecov/codecov-action@v1
+
   pytest-linux:
     name: pytest
     runs-on: ${{ matrix.os }}
@@ -22,26 +59,26 @@ jobs:
         source activate weldx
         pytest
 
-  pytest-win:
-    name: pytest
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest]
-    steps:
-    - uses: actions/checkout@v1
-    - name: Add conda directories to PATH
-      run: |
-        echo ::add-path::C:\Miniconda
-        echo ::add-path::C:\Miniconda\Scripts
-    - name: Print conda info
-      run: conda info -a
-    - name: Create conda environment
-      run: conda env create -f ./environment.yml
-    - name: Init bash
-      run: conda init powershell
-    - name: Run tests
-      run: |
-        conda activate weldx
-        pytest
+#  pytest-win:
+#    name: pytest
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: [windows-latest]
+#    steps:
+#    - uses: actions/checkout@v1
+#    - name: Add conda directories to PATH
+#      run: |
+#        echo ::add-path::C:\Miniconda
+#        echo ::add-path::C:\Miniconda\Scripts
+#    - name: Print conda info
+#      run: conda info -a
+#    - name: Create conda environment
+#      run: conda env create -f ./environment.yml
+#    - name: Init bash
+#      run: conda init powershell
+#    - name: Run tests
+#      run: |
+#        conda activate weldx
+#        pytest
