--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,8 +26,7 @@ jobs:
         uses: goanpeca/setup-miniconda@v1
         with:
           miniconda-version: "latest"
-          auto-update-conda: true
-          python-version: 3.6
+          auto-update-conda: false
           environment-file: environment.yml
           activate-environment: weldx
           auto-activate-base: false
