--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -37,6 +37,7 @@ jobs:
           auto-update-conda: false
           environment-file: ./conda.recipe/build_env.yml
           activate-environment: build_env
+          channels: defaults,conda-forge
           auto-activate-base: false
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
