--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Conda Environment
         uses: goanpeca/setup-miniconda@v1
         with:
-          auto-update-conda: false
+          auto-update-conda: true
           environment-file: environment.yml
           activate-environment: weldx
           auto-activate-base: false
