--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -40,6 +40,7 @@ jobs:
           channels: defaults,conda-forge
           auto-activate-base: false
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
+          notify_outdated_conda: false
 
       - name: conda info
         shell: bash -l {0}
